lib/skc_async_experiment/tests/snapshots/cps__cps_transformation@if_async_then.sk.snap
---
source: lib/skc_async_experiment/tests/cps.rs
expression: compile(sk_path).unwrap()
input_file: lib/skc_async_experiment/tests/cps/if_async_then.sk
---
extern([+]) print (Int)->Void;
extern() sleep_sec (ChiikaEnv,Int,(ChiikaEnv,Void)->RustFuture)->RustFuture;
extern([+]) Int#+ (Int,Int)->Int;
extern([+]) Int#- (Int,Int)->Int;
extern([+]) Int#* (Int,Int)->Int;
extern([+]) Int#% (Int,Int)->Int;
extern([+]) Int#and (Int,Int)->Int;
extern([+]) Int#or (Int,Int)->Int;
extern([+]) Int#xor (Int,Int)->Int;
extern([+]) Int#lshift (Int,Int)->Int;
extern([+]) Int#rshift (Int,Int)->Int;
extern([+]) Int#< (Int,Int)->Bool;
extern([+]) Int#<= (Int,Int)->Bool;
extern([+]) Int#> (Int,Int)->Bool;
extern([+]) Int#>= (Int,Int)->Bool;
extern([+]) Int#== (Int,Int)->Bool;
fun run(ChiikaEnv $env, (ChiikaEnv,Int)->RustFuture $cont) -> RustFuture {
  chiika_env_push_frame(%arg0, 1)  #-> Void
  chiika_env_set(%arg0, 0, (%arg1 as Any), 6)  #-> Void
  if true
    return run't[*](%arg0) # RustFuture
  else
    return run'f[*](%arg0) # RustFuture
  end  #-> Never
}
fun run't(ChiikaEnv $env) -> RustFuture {
  return sleep_sec[*](%arg0, 1, run_2) # RustFuture  #-> Never
}
fun run_2(ChiikaEnv $env, Void $async_result) -> RustFuture {
  %arg1  #-> Void
  return run'e(%arg0, 1) # RustFuture  #-> Never
}
fun run'f(ChiikaEnv $env) -> RustFuture {
  return run'e(%arg0, 2) # RustFuture  #-> Never
}
fun run'e(ChiikaEnv $env, Int $ifResult) -> RustFuture {
  %arg1  #-> Int
  3  #-> Int
}
